# VisualSegmentEditor

./: CMakeLists.txt  Start.bat
VisualSegmentEditor/: CMakeLists.txt  qSlicerVisualSegmentEditorModule.cxx  qSlicerVisualSegmentEditorModule.h  qSlicerVisualSegmentEditorModuleWidget.cxx  qSlicerVisualSegmentEditorModuleWidget.h
VisualSegmentEditor/Logic/: vtkSlicerVisualSegmentEditorLogic.cxx  vtkSlicerVisualSegmentEditorLogic.h
VisualSegmentEditor/Resources/: qSlicerVisualSegmentEditorModule.qrc
VisualSegmentEditor/Resources/UI/: qSlicerVisualSegmentEditorFooBarWidget.ui  qSlicerVisualSegmentEditorModuleWidget.ui
VisualSegmentEditor/Widgets/: CMakeLists.txt  qSlicerVisualSegmentEditorFooBarWidget.cxx  qSlicerVisualSegmentEditorFooBarWidget.h  qVisualSegmentEditorWidget.cxx  qVisualSegmentEditorWidget.h
